--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <h1 class="text-danger text-center">Ma Budgétisation</h1>
 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
                 <!-- Section pour afficher la liste des transactions -->
                 <h2 class="mt-4">Liste des Transactions</h2>
                 <ul class="list-group" id="transactions-list"></ul>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
                 <!-- Section pour ajouter une nouvelle transaction -->
                 <h2 class="mt-4">Ajouter une Transaction</h2>
                 <div class="mb-3">
@@ -66,7 +66,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
                 <!-- Section pour afficher le graphique des transactions -->
                 <h2 class="mt-4">Graphique des Transactions</h2>
                 <canvas id="transaction-chart" width="400" height="200"></canvas>
