--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <div class="col-md-4 col-sm-6">
                 <!-- Section pour ajouter une nouvelle transaction -->
                 <h2 class="mt-4">Ajouter une Transaction</h2>
+                <!-- Ajout de l'input pour l'index à modifier -->
+                <input type="hidden" id="index-to-modify" value="">
                 <div class="mb-3">
                     <!-- Sélection du type de transaction (Revenu/Dépense) -->
                     <label for="type" class="form-label">Type:</label>
