--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Application de Budgétisation</title>
 
     <!-- Inclusion de la feuille de style Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
 
     <!-- Inclusion du script Bootstrap (JS) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -15,71 +18,89 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!-- Inclusion de la feuille de style personnalisée -->
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
     <div class="container-fluid mt-5">
-        <!-- Titre principal de l'application -->
-        <h1 class="text-danger text-center">Ma Budgétisation</h1>
+      <!-- Titre principal de l'application -->
+      <h1 class="text-danger text-center">Ma Budgétisation</h1>
 
-        <div class="row">
-            <div class="col-md-4 col-sm-6">
-                <!-- Section pour afficher la liste des transactions -->
-                <h2 class="mt-4">Liste des Transactions</h2>
-                <ul class="list-group" id="transactions-list"></ul>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <!-- Section pour ajouter une nouvelle transaction -->
-                <h2 class="mt-4">Ajouter une Transaction</h2>
-                <!-- Ajout de l'input pour l'index à modifier -->
-                <input type="hidden" id="index-to-modify" value="">
-                <div class="mb-3">
-                    <!-- Sélection du type de transaction (Revenu/Dépense) -->
-                    <label for="type" class="form-label">Type:</label>
-                    <select class="form-select" id="type">
-                        <option value="income">Revenu</option>
-                        <option value="expense">Dépense</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <!-- Champ de saisie de la description de la transaction -->
-                    <label for="description" class="form-label">Description:</label>
-                    <input type="text" class="form-control" id="description">
-                </div>
-                <div class="mb-3">
-                    <!-- Champ de saisie du montant de la transaction -->
-                    <label for="amount" class="form-label">Montant:</label>
-                    <input type="number" class="form-control" id="amount" step="0.01">
-                </div>
-                <div class="mb-3">
-                    <!-- Sélection de la catégorie de la transaction -->
-                    <label for="category" class="form-label">Catégorie:</label>
-                    <select class="form-select" id="category"></select>
-                </div>
-                <button class="btn btn-success btn-block" onclick="ajouterTransaction()">Ajouter</button>
-                <button class="btn btn-danger btn-block mt-2" onclick="reinitialiser()">Réinitialiser</button>
-                <div class="mb-3">
-                    <!-- Filtrage des transactions par catégorie -->
-                    <label for="filter" class="form-label">Filtrer par catégorie:</label>
-                    <select class="form-select" id="filter" onchange="filtrerTransactions()">
-                        <option value="all">Toutes les catégories</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-12">
-                <!-- Section pour afficher le graphique des transactions -->
-                <h2 class="mt-4">Graphique des Transactions</h2>
-                <canvas id="transaction-chart" width="400" height="200"></canvas>
-            </div>
+      <div class="row">
+        <div class="col-md-4 col-sm-6">
+          <!-- Section pour afficher la liste des transactions -->
+          <h2 class="mt-4">Liste des Transactions</h2>
+          <ul class="list-group" id="transactions-list"></ul>
         </div>
 
-        <!-- Affichage du solde du budget -->
-        <h2 class="mt-4 text-center">Solde du Budget: <span id="balance" class="text-success">0.00 €</span></h2>
+        <div class="col-md-4 col-sm-6">
+          <!-- Section pour ajouter une nouvelle transaction -->
+          <h2 class="mt-4">Ajouter une Transaction</h2>
+          <!-- Ajout de l'input pour l'index à modifier -->
+          <input type="hidden" id="index-to-modify" value="" />
+          <div class="mb-3">
+            <!-- Sélection du type de transaction (Revenu/Dépense) -->
+            <label for="type" class="form-label">Type:</label>
+            <select class="form-select" id="type">
+              <option value="income">Revenu</option>
+              <option value="expense">Dépense</option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <!-- Champ de saisie de la description de la transaction -->
+            <label for="description" class="form-label">Description:</label>
+            <input type="text" class="form-control" id="description" />
+          </div>
+          <div class="mb-3">
+            <!-- Champ de saisie du montant de la transaction -->
+            <label for="amount" class="form-label">Montant:</label>
+            <input type="number" class="form-control" id="amount" step="0.01" />
+          </div>
+          <div class="mb-3">
+            <!-- Sélection de la catégorie de la transaction -->
+            <label for="category" class="form-label">Catégorie:</label>
+            <select class="form-select" id="category"></select>
+          </div>
+          <button
+            class="btn btn-success btn-block"
+            onclick="ajouterTransaction()"
+          >
+            Ajouter
+          </button>
+          <button
+            class="btn btn-danger btn-block mt-2"
+            onclick="reinitialiser()"
+          >
+            Réinitialiser
+          </button>
+          <div class="mb-3">
+            <!-- Filtrage des transactions par catégorie -->
+            <label for="filter" class="form-label"
+              >Filtrer par catégorie:</label
+            >
+            <select
+              class="form-select"
+              id="filter"
+              onchange="filtrerTransactions()"
+            >
+              <option value="all">Toutes les catégories</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-sm-12">
+          <!-- Section pour afficher le graphique des transactions -->
+          <h2 class="mt-4">Graphique des Transactions</h2>
+          <canvas id="transaction-chart" width="400" height="200"></canvas>
+        </div>
+      </div>
+
+      <!-- Affichage du solde du budget -->
+      <h2 class="mt-4 text-center">
+        Solde du Budget: <span id="balance" class="text-success">0.00 €</span>
+      </h2>
     </div>
 
     <!-- Inclusion du script principal de l'application -->
     <script src="js/app.js"></script>
-</body>
+  </body>
 </html>
